My docker project

--- a/vote/Dockerfile
+++ b/vote/Dockerfile
@@ -2,8 +2,7 @@
 FROM python:3.9-slim
 
 # add curl for healthcheck
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
+RUN apt-get install -y --no-install-recommends \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
